# auth

./: .gitignore  README.md  pyproject.toml  shutka.py
hendlers/: hendlers.py
model/: models.py
service/: .flake8
test/: test_validation.py
